# trial-llm-app

./: README.md  compose.yaml  workspace.code-workspace
claude-code/: package.json
llm-app-server/: pyproject.toml  ruff.toml
llm-app-server/src/: main.py  settings.py
llm-app-server/src/llm_clients/: base_client.py  gemini_client.py
llm-app-server/src/mcp_clients/: poke_mcp_clients.py
llm-app-server/src/models/: base_model.py  gemini_model.py
llm-app-server/src/routes/: generate_text.py  llm.py
llm-app-server/src/schemas/: generate_text.py  image.py  message.py
llm-app-server/src/tools/: utils.py
llm-app-server/src/utils/: agent_wrapper.py  image_utils.py  llm_wrapper.py  message_utils.py
poke-mcp-server/: Dockerfile  pyproject.toml
poke-mcp-server/src/: greeting_tools.py  main.py  math_tools.py
skeleton-app/: svelte.config.js  vite.config.ts
skeleton-app/src/lib/utils/: request.ts
web-client/: package-lock.json  package.json
web-client/src/lib/api/: generateText.ts  generateTextAgent.ts  generateTextStream.ts  paths.ts
web-client/src/lib/components/: ChatEntriesVeiw.svelte
web-client/src/lib/components/buttons/: ImageUpload.svelte
web-client/src/lib/constants/: common.ts
web-client/src/lib/types/: chat.ts  image.ts  response.ts
web-client/src/lib/utils/: request.ts
web-client/src/routes/: +layout.svelte
web-client/src/routes/(auth)/(root)/: +page.svelte  +page.ts
web-client/src/routes/(auth)/dialog/: +page.svelte
web-client/src/routes/(auth)/example/: +page.svelte
