[project]
name = "llm-app-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "fastapi>=0.115.12",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.25",
    "langchain-google-genai>=2.0.10",
    "mcp>=1.9.3",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "poethepoet>=0.34.0",
    "ruff>=0.11.13",
]

[tool.poe.tasks]
ruff-format = "ruff format ."
ruff-check = "ruff check ."
ruff-fix = "ruff check . --fix"
mypy = "mypy ."

lint = ["ruff-format", "ruff-check", "mypy"]
fix = ["ruff-format", "ruff-fix"]
